--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -12,9 +12,11 @@ emailHelp = "We'll never share your email with anyone else."
 confirmEmail = "Confirm Email"
 password = "Password"
 confirmPassword = "Confirm Password"
+user.exist = "User already exists"
 
 [common]
 email = "Email"
 submit = "Submit"
 close = "Close"
 username = "Username"
+invalid = "invalid"
