--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -24,3 +24,5 @@ username = "Nom d'utilisateur"
 invalid = "invalide"
 password = "Mot de passe"
 welcome = "Bienvenue"
+forbiddenn = "Accès interdit"
+logout = "Déconnexion"
